--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="manifest" href="/manifest.json" />
     <title>MindFlow</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -17,6 +21,9 @@
                 600: '#0284c7',
                 900: '#0c4a6e',
               }
+            },
+            screens: {
+              'standalone': { 'raw': '(display-mode: standalone)' },
             }
           }
         }
@@ -32,6 +39,19 @@
           -ms-overflow-style: none;  /* IE and Edge */
           scrollbar-width: none;  /* Firefox */
       }
+      
+      /* Native app feel */
+      body {
+        -webkit-tap-highlight-color: transparent;
+        -webkit-touch-callout: none;
+        overscroll-behavior-y: none; /* Prevent pull-to-refresh in PWA */
+      }
+
+      /* Disable text selection for UI elements */
+      .select-none {
+        -webkit-user-select: none;
+        user-select: none;
+      }
     </style>
   <script type="importmap">
 {
@@ -43,12 +63,13 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
-    "d3": "https://aistudiocdn.com/d3@^7.9.0"
+    "d3": "https://aistudiocdn.com/d3@^7.9.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-slate-800 antialiased h-screen overflow-hidden selection:bg-brand-100">
-    <div id="root" class="h-full"></div>
+  <body class="bg-gray-50 text-slate-800 antialiased h-screen w-screen overflow-hidden selection:bg-brand-100 select-none">
+    <div id="root" class="h-full w-full"></div>
   </body>
 </html>
