--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
     "d3": "https://aistudiocdn.com/d3@^7.9.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
   }
 }
 </script>
